--- a/fusion-samples/plugin-samples/fusion-charts/Dashboards/Gantt/gantt_cdf.html
+++ b/fusion-samples/plugin-samples/fusion-charts/Dashboards/Gantt/gantt_cdf.html
@@ -1,23 +1,23 @@
-<script type="text/javascript" src="../../repo/files/:public:plugin-samples:fusion-charts:Dashboards:DataSetAndConnectors:MetaLayerCharts_XPFusionChartComponent.js"></script>
+<script type="text/javascript" src="../../repo/files/:public:plugin-samples:fusion-charts:Dashboards:Gantt:MetaLayerCharts.js"></script>
 <link rel="stylesheet" type="text/css" href="dashboardsStyle.css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" type="text/css">
 
 <div class="dashboardContent">
 	<div class="header">
-		<img width="auto" height="70" src="../../../api/repos/FusionCharts/static/custom/img/Logo-FusionChartsPlugin.png">
-		<h2 class="light">FusionCharts XT Type DataSet and Connectors Sample</h2>
+		<img width="auto" height="70" src="../../../api/repos/fusion_plugin/static/custom/img/Logo-FusionChartsPlugin.png">
+		<h2 class="light">FusionCharts XT Type Gantt Sample</h2>
 	</div>
 
 	<div class="Info" style="margin-bottom:30px;">
 		<h5 class="light">How to get Fusion Charts XT</h5>
 		All you need is to obtain the FusionCharts XT zip file by acquiring a  <a href="http://www.xpand-it.com/en/technology/fusioncharts" target="_blank"> FusionCharts license </a>  or by downloading a free trial  <a href=" http://www.fusioncharts.com/download/" target="_blank">http://www.fusioncharts.com/download</a> <br>
-		<div class="regular"> Then you only need to install them in the <a onClick="switchToFusionManager()">FusionCharts Manager page</a>.  </div>
+		<div class="regular"> Then you only need to install them in the <a onClick="Dashboard.switchToFusionManager()">FusionCharts Manager page</a>.  </div>
 	</div>
 
 	<div id="charts">
 		<div id="firstRow">
-			<h5 class="light">Drag Node Chart (Miscellaneous Power  Charts)</h5>
-			<div id="DragNode" style="float:left;margin-right:25px;"></div>
+			<h5 class="light">Gantt Chart (Other charts)</h5>
+			<div id="Gantt" style="float:left;margin-right:25px;"></div>
 		</div>
 	</div>
 
@@ -28,7 +28,7 @@
 		<a href="mailto:marketing@xpand-it.com" target="_top" class="regular">pentaho@xpand-it.com</a>
 	</div>
 	<div class="logos">
-		<img width="150" height="33" src="../../../api/repos/FusionCharts/static/custom/img/logo-xpand.png">
+		<img width="150" height="33" src="../../../api/repos/fusion_plugin/static/custom/img/logo-xpand.png">
 	</div>
 
 </div>
@@ -39,22 +39,28 @@ var dashboard;
 require([
 	'cdf/lib/jquery',
 	'cdf/Dashboard.Bootstrap',
-	'xfusion/charts/XDashFCComponent'],
-	function($, Dashboard, XDashFCComponent) {
+	'xfusion/XDashFusionChartComponent'],
+	function($, Dashboard, XPFusionChartComponent) {
 
 		dashboard = new Dashboard();
 
 
-		dashboard.addComponent(new XDashFCComponent({
-			name            : "DragNode",
-			htmlObject      : "DragNode",
-			chartDefinition : MetaLayerCharts.DragNode,
+		dashboard.addComponent(new XPFusionChartComponent({
+			name            : "Gantt",
+			htmlObject      : "Gantt",
+			chartDefinition : MetaLayerCharts.Gantt,
 			executeAtStart  : true,
-			type            : "XDashFCComponent",
-			dataType        : "DataSetAndConnectors",
+			type            : "XPFusionChartComponent",
+			dataType        : "Gantt",
 			priority        : "1",
 		}));
 
+		dashboard.switchToFusionManager = function() {
+			var path = window.location.pathname.split('/');
+			var url = window.location.origin + "/" + path[1] + '/plugin/fusion_plugin/api/settings';
+			//window.location.href=url;
+			window.open(url, '_blank');
+		}
 
 		dashboard.init();
 		window.Dashboard = dashboard;
