Changed endpointSamples to rJS. Updated Samples. Fixed Fusion Manager XT install

--- a/fusion-samples/plugin-samples/fusion-charts/Dashboards/Dials/dials_cdf.html
+++ b/fusion-samples/plugin-samples/fusion-charts/Dashboards/Dials/dials_cdf.html
@@ -17,7 +17,7 @@
 	<div id="charts">
 		<div id="firstRow">
 			<h5 class="light">Real-time Angular (Gauges)</h5>
-			<div id="AngularGauge" style="float:left;margin-right:25px;"></div>
+			<div id="AngularGauge" style="float:center;margin-right:25px;"></div>
 		</div>
 	</div>
 
@@ -39,8 +39,10 @@ var dashboard;
 require([
 	'cdf/lib/jquery',
 	'cdf/Dashboard.Bootstrap',
-	'xfusion/XDashFusionChartComponent'],
-	function($, Dashboard, XPFusionChartComponent) {
+	'xfusion/XDashFusionChartComponent',
+	'xfusion/SampleEndpoints'
+],
+	function($, Dashboard, XPFusionChartComponent, sparkl) {
 
 		dashboard = new Dashboard();
 
@@ -64,6 +66,31 @@ require([
 
 		dashboard.init();
 		window.Dashboard = dashboard;
+
+		var successCallback = function(json) {
+			window.Dashboard.decrementRunningCalls();
+			for (var index = 0; index < json.resultset.length; index++) {
+				if (json.resultset[index][0] == "free") {
+					if (json.resultset[index][1] == "false") {
+						$(".Info").css("display", "none");
+					} else {
+						$("#charts").css("display", "none");
+					}
+				}
+			}
+		};
+
+		var errorCallback = function(json) {
+			window.Dashboard.decrementRunningCalls();
+		};
+
+		$(document).ready(function() {
+			sparkl.runEndpoint('fusion_plugin', 'isfree', {
+				success: successCallback,
+				error: errorCallback
+			});
+		});
+
 	});
 
 </script>
