--- a/fusion-samples/plugin-samples/fusion-charts/Dashboards/Data/data_cdf.html
+++ b/fusion-samples/plugin-samples/fusion-charts/Dashboards/Data/data_cdf.html
@@ -79,9 +79,10 @@
 	require([
 			'cdf/lib/jquery',
 			'cdf/Dashboard.Bootstrap',
-			'xfusion/XDashFusionChartComponent'
+			'xfusion/XDashFusionChartComponent',
+			'xfusion/SampleEndpoints'
 		],
-		function($, Dashboard, XPFusionChartComponent) {
+		function($, Dashboard, XPFusionChartComponent, sparkl) {
 
 			dashboard = new Dashboard();
 
@@ -292,6 +293,30 @@
 
 			dashboard.init();
 			window.Dashboard = dashboard;
+
+			var successCallback = function(json) {
+				window.Dashboard.decrementRunningCalls();
+				for (var index = 0; index < json.resultset.length; index++) {
+					if (json.resultset[index][0] == "free") {
+						if (json.resultset[index][1] == "false") {
+							$(".Info").css("display", "none");
+						} else {
+							$("#charts").css("display", "none");
+						}
+					}
+				}
+			};
+
+			var errorCallback = function(json) {
+				window.Dashboard.decrementRunningCalls();
+			};
+
+			$(document).ready(function() {
+				sparkl.runEndpoint('fusion_plugin', 'isfree', {
+					success: successCallback,
+					error: errorCallback
+				});
+			});
 
 		});
 </script>
