Plugin CDE Samples

--- a/fusion-samples/plugin-samples/fusion-charts/Dashboards/Maps/maps_cdf.html
+++ b/fusion-samples/plugin-samples/fusion-charts/Dashboards/Maps/maps_cdf.html
@@ -5,7 +5,7 @@
 <div class="dashboardContent">
 	<div class="header">
 		<img width="auto" height="70" src="../../../api/repos/fusion_plugin/static/custom/img/Logo-FusionChartsPlugin.png">
-		<h2 class="light">FusionCharts XT Type Gantt Sample</h2>
+		<h2 class="light">FusionCharts XT Type Maps Sample</h2>
 	</div>
 
 	<div class="Info" style="margin-bottom:30px;">
